# aibalance

./: DISTRIBUTED_QUICK_START.md  DISTRIBUTED_TRAINING.md
configs/: config_aice.yaml  config_both.yaml  config_ocean.yaml  config_sea_ice.yaml  config_sst.yaml  config_tair.yaml  config_test.yaml
hpc/: diagnose.py  diagnose.sh  test_distributed.sh  train.sh  train_distributed.sh  train_distributed_multinode.sh
scripts/: gen_training_data.sh  plot_inference_jacobian.py  train.py
ufsemulator/: cf_mappings.py  data.py  export_to_torchscript.py  model.py  training.py  training_simple.py
ufsemulator/cpp/: CMakeLists.txt  ufs_emulator.cpp
